added missing stuff

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ endfunction()
 
 set(COMMON_IMPALA_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/cuda_utils.impala
+	${CMAKE_CURRENT_SOURCE_DIR}/framework.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/cuda_producer_consumer_queue.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/utils.impala
 )
