--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ endfunction()
 set(COMMON_IMPALA_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/gpu.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/cuda_mapping.impala
-	# ${CMAKE_CURRENT_SOURCE_DIR}/nvvm_mapping.impala
+	${CMAKE_CURRENT_SOURCE_DIR}/nvvm_mapping.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/framework.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/cuda_producer_consumer_queue.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/utils.impala
