--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,7 @@ set(COMMON_IMPALA_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/gpu.impala
 	# ${CMAKE_CURRENT_SOURCE_DIR}/nvvm_mapping.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/framework.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/cuda_producer_consumer_queue.impala
+	${CMAKE_CURRENT_SOURCE_DIR}/producer_consumer_queue.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/utils.impala
 )
 
@@ -43,10 +43,11 @@ endfunction()
 
 
 # if(AnyDSL_runtime_HAS_CUDA_SUPPORT)
-	add_schedule_test(test-cuda-producer-consumer-queue.impala cuda)
 	add_schedule_test(test-basics.impala cuda)
+	add_schedule_test(test-producer-consumer-queue.impala cuda)
 # endif()
 
 # if(AnyDSL_runtime_HAS_OPENCL_SUPPORT)
 	add_schedule_test(test-basics.impala opencl)
+	add_schedule_test(test-producer-consumer-queue.impala opencl)
 # endif()
