Work on shuffles [broken on cpu]

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,7 +57,7 @@ endif()
 
 if (Thorin_HAS_RV_SUPPORT)
 	add_schedule_test(test-basics.impala cpu)
-	# add_schedule_test(test-shuffles.impala cpu)
+	add_schedule_test(test-shuffles.impala cpu)
 	# add_schedule_test(test-producer-consumer-queue.impala cpu)
 endif()
 
