--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,8 @@ if (AnyDSL_runtime_HAS_CUDA_SUPPORT)
 	add_schedule_test(test-basics.impala nvvm)
 	add_schedule_test(test-shuffles.impala cuda)
 	add_schedule_test(test-shuffles.impala nvvm)
+	add_schedule_test(test-barriers.impala cuda)
+	add_schedule_test(test-barriers.impala nvvm)
 	add_schedule_test(test-producer-consumer-queue.impala cuda)
 	add_schedule_test(test-producer-consumer-queue.impala nvvm)
 endif()
@@ -46,18 +48,21 @@ endif()
 if (AnyDSL_runtime_HAS_OPENCL_SUPPORT)
 	add_schedule_test(test-basics.impala opencl)
 	add_schedule_test(test-shuffles.impala opencl)
+	add_schedule_test(test-barriers.impala opencl)
 	add_schedule_test(test-producer-consumer-queue.impala opencl)
 endif()
 
 if (AnyDSL_runtime_HAS_HSA_SUPPORT)
 	add_schedule_test(test-basics.impala amdgpu)
 	add_schedule_test(test-shuffles.impala amdgpu)
+	add_schedule_test(test-barriers.impala amdgpu)
 	add_schedule_test(test-producer-consumer-queue.impala amdgpu)
 endif()
 
 if (Thorin_HAS_RV_SUPPORT)
 	add_schedule_test(test-basics.impala cpu)
 	add_schedule_test(test-shuffles.impala cpu)
+	add_schedule_test(test-barriers.impala cpu)
 	# add_schedule_test(test-producer-consumer-queue.impala cpu)
 
 	add_schedule_test(test-rv-intrinsics.impala cpu)
