--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,5 +94,5 @@ if (Thorin_HAS_RV_SUPPORT AND AnyQ_FIBER_SUPPORT)
 	add_schedule_test(test-barriers.impala cpu)
 	# add_schedule_test(test-producer-consumer-queue.impala cpu)
 
-	# add_schedule_test(test-rv-intrinsics.impala cpu)
+	add_schedule_test(test-rv-intrinsics.impala cpu)
 endif()
