--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,8 @@ set(COMMON_IMPALA_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/gpu.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/framework.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/producer_consumer_queue.impala
+	${CMAKE_CURRENT_SOURCE_DIR}/pipeline.impala
+	${CMAKE_CURRENT_SOURCE_DIR}/demo.impala
 	${CMAKE_CURRENT_SOURCE_DIR}/utils.impala
 )
 
