--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,7 @@
 			"type": "python",
 			"request": "launch",
 			"program": "${file}",
-			// "args": ["-deps"],
+			//"args": ["-dep", "llvm"],
 			"console": "integratedTerminal"
 		}
 	]
