--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -98,3 +98,7 @@ if (Thorin_HAS_RV_SUPPORT AND AnyQ_FIBER_SUPPORT)
 
 	add_schedule_test(test-rv-intrinsics.impala cpu)
 endif()
+
+if (Thorin_HAS_RV_SUPPORT)
+	add_subdirectory(rv-test-suite)
+endif()
