Add atomic_max to test-suite

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -100,6 +100,7 @@ set(TEST_SUITE_FILES
 	test-suite-atomic_add.impala
 	test-suite-atomic_sub.impala
 	test-suite-atomic_sub_u32.impala
+	test-suite-atomic_max.impala
 	test-suite-atomic_or.impala
 	test-suite-shfl_bfly.impala
 )
