--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -103,6 +103,7 @@ set(TEST_SUITE_FILES
 	test-suite-atomic_min.impala
 	test-suite-atomic_max.impala
 	test-suite-atomic_or.impala
+	test-suite-atomic_cas.impala
 	test-suite-shfl_bfly.impala
 )
 
