Add atomic_inc to test-suite

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,6 +105,7 @@ set(TEST_SUITE_FILES
 	test-suite-atomic_or.impala
 	test-suite-atomic_cas.impala
 	test-suite-atomic_exch.impala
+	test-suite-atomic_inc.impala
 	test-suite-scatter_writes.impala
 	test-suite-shfl_bfly.impala
 )
