--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-source_group("Artic Files" REGULAR_EXPRESSION "[.]impala$")
+source_group("Artic Files" REGULAR_EXPRESSION "[.]art$")
 
 function(offline_graph _target)
 	set(_infiles ${ARGN})
-	list(FILTER _infiles INCLUDE REGEX "[.]impala$")
+	list(FILTER _infiles INCLUDE REGEX "[.]art$")
 	anydsl_runtime_wrap(_${_target}_PROGRAM
 		FRONTEND artic
 		CLANG_FLAGS -march=native
@@ -19,13 +19,13 @@ function(offline_graph _target)
 endfunction()
 
 set(COMMON_ARTIC_FILES
-	${CMAKE_CURRENT_SOURCE_DIR}/gpu.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/framework.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/producer_consumer_queue.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/ringbuffer_allocator.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/pipeline.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/demo.impala
-	${CMAKE_CURRENT_SOURCE_DIR}/utils.impala
+	${CMAKE_CURRENT_SOURCE_DIR}/gpu.art
+	${CMAKE_CURRENT_SOURCE_DIR}/framework.art
+	${CMAKE_CURRENT_SOURCE_DIR}/producer_consumer_queue.art
+	${CMAKE_CURRENT_SOURCE_DIR}/ringbuffer_allocator.art
+	${CMAKE_CURRENT_SOURCE_DIR}/pipeline.art
+	${CMAKE_CURRENT_SOURCE_DIR}/demo.art
+	${CMAKE_CURRENT_SOURCE_DIR}/utils.art
 )
 
 find_package(Boost 1.65 COMPONENTS fiber)
@@ -42,7 +42,7 @@ if (Boost_FOUND)
 		VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 	target_link_libraries(fiber-test PRIVATE fiber-support)
 
-	offline_graph(fiber-integration fibers.impala)
+	offline_graph(fiber-integration fibers.art)
 	set_target_properties(fiber-integration PROPERTIES FOLDER "tests/cpu")
 	target_link_libraries(fiber-integration PRIVATE fiber-support)
 
@@ -56,7 +56,7 @@ endif()
 function(add_schedule_test _testfile _mapping)
 	get_filename_component(_testname ${_testfile} NAME_WE)
 	set(_target "${_testname}-${_mapping}")
-	offline_graph(${_target} ${COMMON_ARTIC_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/mapping_${_mapping}.impala" ${_testfile} ${ARGN})
+	offline_graph(${_target} ${COMMON_ARTIC_FILES} "${CMAKE_CURRENT_SOURCE_DIR}/mapping_${_mapping}.art" ${_testfile} ${ARGN})
 	set_target_properties(${_target} PROPERTIES FOLDER "tests/${_mapping}" )
 	set(ADDITIONAL_LINK_DEPENDENCY ${ADDITIONAL_LINK_DEPENDENCY_${_mapping}})
 	# message(STATUS "ADDITIONAL_LINK_DEPENDENCY: ${ADDITIONAL_LINK_DEPENDENCY}")
@@ -72,10 +72,10 @@ set(TEST_PLATFORMS)
 
 if (AnyDSL_runtime_HAS_CUDA_SUPPORT)
 	list(APPEND TEST_PLATFORMS cuda nvvm)
-    add_schedule_test(test-ringbuffer-allocator.impala cuda)
-    add_schedule_test(test-ringbuffer-allocator.impala nvvm)
-    add_schedule_test(test-pipeline.impala cuda)
-    add_schedule_test(test-pipeline.impala nvvm)
+    add_schedule_test(test-ringbuffer-allocator.art cuda)
+    add_schedule_test(test-ringbuffer-allocator.art nvvm)
+    add_schedule_test(test-pipeline.art cuda)
+    add_schedule_test(test-pipeline.art nvvm)
 endif()
 
 if (AnyDSL_runtime_HAS_HSA_SUPPORT)
@@ -84,29 +84,29 @@ endif()
 
 if (Thorin_HAS_RV_SUPPORT AND AnyQ_FIBER_SUPPORT)
 	list(APPEND TEST_PLATFORMS cpu)
-	# add_schedule_test(test-rv-intrinsics.impala cpu)
-	# offline_graph(test-rv-atomic-minimal test-rv-atomic-minimal.impala)
+	# add_schedule_test(test-rv-intrinsics.art cpu)
+	# offline_graph(test-rv-atomic-minimal test-rv-atomic-minimal.art)
 endif()
 
 set(TEST_SCHEDULE_FILES
-	test-basics.impala
-	test-shuffles.impala
-	test-barriers.impala
-	test-producer-consumer-queue.impala
+	test-basics.art
+	test-shuffles.art
+	test-barriers.art
+	test-producer-consumer-queue.art
 )
 
 set(TEST_SUITE_FILES
-	test-suite-atomic_add.impala
-	test-suite-atomic_sub.impala
-	test-suite-atomic_sub_u32.impala
-	test-suite-atomic_min.impala
-	test-suite-atomic_max.impala
-	test-suite-atomic_or.impala
-	test-suite-atomic_cas.impala
-	test-suite-atomic_exch.impala
-	test-suite-atomic_inc.impala
-	test-suite-scatter_writes.impala
-	test-suite-shfl_bfly.impala
+	test-suite-atomic_add.art
+	test-suite-atomic_sub.art
+	test-suite-atomic_sub_u32.art
+	test-suite-atomic_min.art
+	test-suite-atomic_max.art
+	test-suite-atomic_or.art
+	test-suite-atomic_cas.art
+	test-suite-atomic_exch.art
+	test-suite-atomic_inc.art
+	test-suite-scatter_writes.art
+	test-suite-shfl_bfly.art
 )
 
 foreach(_test_platform ${TEST_PLATFORMS})
@@ -115,7 +115,7 @@ foreach(_test_platform ${TEST_PLATFORMS})
 	endforeach()
 
 	foreach(_test_case ${TEST_SUITE_FILES})
-		add_schedule_test(${_test_case} ${_test_platform} test-suite.impala)
+		add_schedule_test(${_test_case} ${_test_platform} test-suite.art)
 	endforeach()
 endforeach()
 
