Disable broken test-ringbuffer-allocator test-pipeline

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,10 +68,10 @@ set(TEST_PLATFORMS)
 
 if (AnyDSL_runtime_HAS_CUDA_SUPPORT)
 	list(APPEND TEST_PLATFORMS cuda nvvm)
-    add_schedule_test(test-ringbuffer-allocator.art cuda)
-    add_schedule_test(test-ringbuffer-allocator.art nvvm)
-    add_schedule_test(test-pipeline.art cuda)
-    add_schedule_test(test-pipeline.art nvvm)
+    # add_schedule_test(test-ringbuffer-allocator.art cuda)
+    # add_schedule_test(test-ringbuffer-allocator.art nvvm)
+    # add_schedule_test(test-pipeline.art cuda)
+    # add_schedule_test(test-pipeline.art nvvm)
 endif()
 
 if (AnyDSL_runtime_HAS_HSA_SUPPORT)
