--- a/src/rv-test-suite/CMakeLists.txt
+++ b/src/rv-test-suite/CMakeLists.txt
@@ -20,7 +20,7 @@ if (Thorin_HAS_RV_SUPPORT)
 			offline_graph(${_target} "${CMAKE_CURRENT_SOURCE_DIR}/main.art" ${_test_filename} ${_test_impl})
 			set_target_properties(${_target} PROPERTIES FOLDER "tests/rv" )
 			if (BUILD_TESTING)
-				add_test(NAME "${_target}" COMMAND ${_target} WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+				add_testcase(${_target} ${_test_filename} cpu)
 			endif()
 		endforeach()
 	endforeach()
