Add test fiber-test-idx-wave-atomic

--- a/src/fiber-test-suite/CMakeLists.txt
+++ b/src/fiber-test-suite/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SUITE_FILES
 	fiber-test-idx-group.art
 	fiber-test-idx-group-thread.art
 	fiber-test-idx-wave.art
+	fiber-test-idx-wave-atomic.art
 	fiber-test-idx-group-wave-thread.art
 )
 
