--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ set(COMMON_TEST_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/utils.art
 )
 
-source_group("Source Files" FILES ${COMMON_ARTIC_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/test-suite.art)
+source_group("Source Files" FILES ${COMMON_ARTIC_FILES} ${COMMON_TEST_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/test-suite.art)
 source_group("Runtime Files" REGULAR_EXPRESSION ".*/runtime/platforms/.+[.](impala|art)$")
 
 find_package(Boost 1.65 COMPONENTS fiber)
