--- a/src/fiber-test-suite/CMakeLists.txt
+++ b/src/fiber-test-suite/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-source_group("Source Files" FILES ${COMMON_ARTIC_FILES})
+source_group("Source Files" FILES ${COMMON_ARTIC_FILES} ${COMMON_TEST_FILES})
 source_group("Runtime Files" REGULAR_EXPRESSION ".*/runtime/platforms/.+[.](impala|art)$")
 source_group("/" REGULAR_EXPRESSION "test-.+[.]art$")
 
