--- a/src/fiber-test-suite/CMakeLists.txt
+++ b/src/fiber-test-suite/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SUITE_FILES
 	fiber-test-idx-wave-thread.art
 	fiber-test-idx-group-wave.art
 	fiber-test-idx-group-wave-thread.art
+	fiber-test-idx-group-2xthread.art
 )
 
 foreach(_test_case ${TEST_SUITE_FILES})
