--- a/src/fiber-test-suite/CMakeLists.txt
+++ b/src/fiber-test-suite/CMakeLists.txt
@@ -21,6 +21,7 @@ set(TEST_SUITE_FILES
 	fiber-test-idx-wave.art
 	fiber-test-idx-wave-atomic.art
 	fiber-test-idx-wave-shuffle.art
+	fiber-test-idx-wave-constant-shuffle.art
 	fiber-test-idx-wave-thread.art
 	fiber-test-idx-group-wave.art
 	fiber-test-idx-group-wave-thread.art
