--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,7 @@ set(TEST_SCHEDULE_FILES
 	test-barriers.art
 	test-producer-consumer-queue-push-pop-generic.art
 	test-producer-consumer-queue-push-pop-generic-struct.art
+	test-producer-consumer-queue-push-pop-generic-definite-array.art
 	test-producer-consumer-queue-push-pop-index.art
 )
 
