refactor atomics, add memory order (completes #21)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ endfunction()
 
 set(COMMON_ARTIC_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/gpu.art
+	${CMAKE_CURRENT_SOURCE_DIR}/atomic.art
 	${CMAKE_CURRENT_SOURCE_DIR}/producer_consumer_queue.art
 	# ${CMAKE_CURRENT_SOURCE_DIR}/ringbuffer_allocator.art
 	# ${CMAKE_CURRENT_SOURCE_DIR}/pipeline.art
